update comments in inverted_index file

--- a/inverted_index.ipynb
+++ b/inverted_index.ipynb
@@ -226,7 +226,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Authenticate your user with the email connected to your GCP account\n",
+        "# Authenticate our user with the email connected to our GCP account\n",
         "from google.colab import auth\n",
         "auth.authenticate_user()"
       ],
@@ -240,7 +240,8 @@
       "cell_type": "code",
       "source": [
         "# Copy one wikidumps files \n",
-        "#TODO - change to the full wiki dump data file when trying to build the real index\n",
+        "\n",
+        "#TODO - change to the complete wiki dump data file ('big wiki') when trying to build the real index\n",
         "\n",
         "import os\n",
         "from pathlib import Path\n",
@@ -289,7 +290,8 @@
       "cell_type": "code",
       "source": [
         "# Transforming the wiki corpus into parquet file, and then into RDD. \n",
-        "#TODO - change to the full wiki dump data file when trying to build the real index\n",
+        "\n",
+        "#TODO - change to the complete wiki dump data file ('big wiki') when trying to build the real index\n",
         "\n",
         "from pathlib import Path \n",
         "import os\n",
@@ -301,7 +303,7 @@
         "      path = \"wikidumps/*\"\n",
         "\n",
         "parquetFile = spark.read.parquet(path)\n",
-        "#parquetFile.show() #TODO - delete this row"
+        "#parquetFile.show()"
       ],
       "metadata": {
         "id": "hOLv2FxdupvH",
@@ -355,7 +357,7 @@
       "cell_type": "markdown",
       "source": [
         "**word_count**: Count the frequency of each word in the given text (tf),\n",
-        "  and choose if you want to remove stopword by using removeStopword boolean argument.\n",
+        "  and choose if we want to remove stopword by using removeStopword boolean argument.\n",
         "  "
       ],
       "metadata": {
@@ -507,6 +509,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#TODO - only for debug, at the end- delete this cell\n",
         "TUPLE_SIZE = 6       \n",
         "TF_MASK = 2 ** 16 - 1 # Masking the 16 low bits of an integer\n",
         "from contextlib import closing\n",
@@ -531,10 +534,9 @@
     {
       "cell_type": "code",
       "source": [
-        "#TODO - delete this section before submission\n",
+        "#TODO - delete this section before submission - we will use the whole wiki corpus\n",
         "\n",
         "#add another RDD with the files of our train data set of queries (30), to make sure that we have those files in our small corpus\n",
-        "#docsID\n",
         "df = parquetFile[parquetFile[\"id\"].isin(docsID)]"
       ],
       "metadata": {
@@ -546,6 +548,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# in this bucket in GCP we will store our indexes-files\n",
         "bucket_name = 'project_ir_inverted_index_test'"
       ],
       "metadata": {
@@ -575,49 +578,21 @@
     {
       "cell_type": "code",
       "source": [
-        "#TODO - delete this section before submission\n",
+        "#TODO - change to unlimit when building the real corpus\n",
         "\n",
         "# take the selected parameters of the first 1,000 rows and create an RDD from it\n",
-        "general_1000_docs_body = parquetFile.limit(1000).select(\"text\",\"id\").rdd #todo - comment\n",
-        "#doc_text_pairs = parquetFile.limit(1000).select(\"id\",\"title\",\"text\",\"anchor_text\").rdd #todo - uncomment\n",
+        "general_1000_docs_body = parquetFile.limit(1000).select(\"text\",\"id\").rdd\n",
+        "#general_1000_docs_body.take(20)\n",
         "\n",
-        "#general_1000_docs_body.take(20)"
-      ],
-      "metadata": {
-        "id": "_4zLZ4ClxLNV"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "in_train_test_docs_body = df.select(\"text\",\"id\").rdd #todo - comment\n",
-        "#doc_text_pairs = df.limit(2453).select(\"id\",\"title\",\"text\",\"anchor_text\").rdd #todo - uncomment\n",
-        "#in_train_test_docs.take(20)"
-      ],
-      "metadata": {
-        "id": "mdeU5L_Ex0N1"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#RDD of our temporary corpus\n",
+        "in_train_test_docs_body = df.select(\"text\",\"id\").rdd\n",
+        "#in_train_test_docs.take(20)\n",
         "\n",
-        "\n",
+        "#RDD of our temporary corpus - delte when build the real index\n",
         "united_body_corpus = in_train_test_docs_body.union(general_1000_docs_body).distinct()\n",
-        "#todo naama\n",
-        "#united_body_corpus = general_1000_docs_body\n",
-        "\n",
-        "\n",
-        "#united.take(20)\n",
         "#united.count()"
       ],
       "metadata": {
-        "id": "ABIQYtt-DBZy"
+        "id": "_4zLZ4ClxLNV"
       },
       "execution_count": null,
       "outputs": []
@@ -634,8 +609,7 @@
     {
       "cell_type": "code",
       "source": [
-        "word_counts_body = united_body_corpus.flatMap(lambda x: word_count(x[0], x[1],True))\n",
-        "#word_counts_body.take(1)"
+        "word_counts_body = united_body_corpus.flatMap(lambda x: word_count(x[0], x[1],True))"
       ],
       "metadata": {
         "id": "7vLBHV-qvUFI"
@@ -646,7 +620,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Filter out rare words"
+        "Filter out rare words, calculate DF, and write the complete index"
       ],
       "metadata": {
         "id": "9OZkbwmqx_4s"
@@ -661,7 +635,6 @@
         "\n",
         "#RDD of (token, df) pair\n",
         "w2df_body = calculate_df(postings_filtered_body).collectAsMap()\n",
-        "#w2df_body.take(10)\n",
         "\n",
         "# todo delete this cell\n",
         "posting_locs_list_body = partition_postings_and_write(postings_filtered_body).collect()\n",
@@ -687,6 +660,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 387
         },
+        "collapsed": true,
         "outputId": "8cbd08cd-c432-4565-c6e7-9115dbd72071"
       },
       "execution_count": 27,
@@ -740,6 +714,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#make sure that the data was written\n",
         "!gsutil ls -lh $index_dst"
       ],
       "metadata": {
@@ -786,20 +761,11 @@
         "\n",
         "# take the selected parameters of the first 1,000 rows and create an RDD from it\n",
         "general_1000_docs_title = parquetFile.limit(1000).select(\"title\",\"id\").rdd #todo - comment\n",
-        "#doc_text_pairs = parquetFile.limit(1000).select(\"id\",\"title\",\"text\",\"anchor_text\").rdd #todo - uncomment\n",
-        "\n",
-        "#general_1000_docs_title.take(20)\n",
-        "#TODO - delete this section before submission\n",
         "\n",
         "in_train_test_docs_title = df.select(\"title\",\"id\").rdd #todo - comment\n",
-        "#doc_text_pairs = df.limit(2453).select(\"id\",\"title\",\"text\",\"anchor_text\").rdd #todo - uncomment\n",
-        "#in_train_test_docs.take(20)\n",
         "\n",
         "#RDD of our temporary corpus\n",
-        "\n",
-        "united_title_corpus = in_train_test_docs_title.union(general_1000_docs_title).distinct()\n",
-        "#united_title_corpus.take(20)\n",
-        "#united.count()"
+        "united_title_corpus = in_train_test_docs_title.union(general_1000_docs_title).distinct()"
       ],
       "metadata": {
         "id": "5lQZRjwTJu0u"
@@ -819,8 +785,7 @@
     {
       "cell_type": "code",
       "source": [
-        "word_counts_title = united_title_corpus.flatMap(lambda x: word_count(x[0], x[1],False))\n",
-        "#word_counts_title.take(10)"
+        "word_counts_title = united_title_corpus.flatMap(lambda x: word_count(x[0], x[1],False))"
       ],
       "metadata": {
         "id": "vFexvqu_K_Ju"
@@ -831,7 +796,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Filter out rare words"
+        "Filter out rare words, calculate DF, and write the complete index"
       ],
       "metadata": {
         "id": "_cklqF4eK_Ju"
@@ -845,7 +810,6 @@
         "#RDD of (token, df) pair\n",
         "w2df_title = calculate_df(postings_title).collectAsMap()\n",
         "\n",
-        "# todo delete this cell\n",
         "posting_locs_list_title = partition_postings_and_write(postings_title).collect()\n",
         "\n",
         "# merge the posting locations into a single dict and run more tests (5 points) - todo delete this cell\n",
@@ -893,25 +857,18 @@
         "#TODO - delete this section before submission\n",
         "\n",
         "# take the selected parameters of the first 1,000 rows and create an RDD from it\n",
-        "general_1000_docs_anchor_text = parquetFile.limit(1000).select(\"id\",\"anchor_text\").rdd #todo - comment\n",
+        "general_1000_docs_anchor_text = parquetFile.limit(1000).select(\"id\",\"anchor_text\").rdd \n",
         "general_1000_docs_anchor_text_flat = general_1000_docs_anchor_text.map(lambda x : (x[0],\", \".join([y[\"text\"] for y in x[1]])))\n",
         "\n",
-        "#doc_text_pairs = parquetFile.limit(1000).select(\"id\",\"title\",\"text\",\"anchor_text\").rdd #todo - uncomment\n",
         "\n",
         "#general_1000_docs_anchor_text.take(20)\n",
-        "#TODO - delete this section before submission\n",
         "\n",
         "in_train_test_docs_anchor_text = df.select(\"id\",\"anchor_text\").rdd #todo - comment\n",
         "in_train_test_docs_anchor_text_flat = in_train_test_docs_anchor_text.map(lambda x : (x[0],\", \".join([y[\"text\"] for y in x[1]])))\n",
-        "#doc_text_pairs = df.limit(2453).select(\"id\",\"title\",\"text\",\"anchor_text\").rdd #todo - uncomment\n",
-        "#in_train_test_docs_anchor_text.take(20)\n",
         "\n",
         "#RDD of our temporary corpus\n",
         "\n",
-        "united_anchor_text_corpus = in_train_test_docs_anchor_text_flat.union(general_1000_docs_anchor_text_flat).distinct() #todo not working\n",
-        "\n",
-        "#united_anchor_text_corpus.take(20)\n",
-        "#united.count()"
+        "united_anchor_text_corpus = in_train_test_docs_anchor_text_flat.union(general_1000_docs_anchor_text_flat).distinct()"
       ],
       "metadata": {
         "id": "Zc7RZ2SSQNRi"
@@ -940,8 +897,7 @@
     {
       "cell_type": "code",
       "source": [
-        "word_counts_anchor_text = united_anchor_text_corpus.flatMap(lambda x: word_count(str(x[1]), x[0],True))\n",
-        "word_counts_anchor_text.take(1)"
+        "word_counts_anchor_text = united_anchor_text_corpus.flatMap(lambda x: word_count(str(x[1]), x[0],True))"
       ],
       "metadata": {
         "colab": {
@@ -965,6 +921,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Filter out rare words, calculate DF, and write the complete index"
+      ],
+      "metadata": {
+        "id": "1cIz6mumNQ8b"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#TODO - (when working on the entire corpus, we will increase this threshold to a minimum of 50 documents).\n",
@@ -972,7 +937,6 @@
         "#RDD of (token, df) pair\n",
         "w2df_anchor_text = calculate_df(postings_anchor_text).collectAsMap()\n",
         "\n",
-        "# todo delete this cell\n",
         "posting_locs_list_anchor_text = partition_postings_and_write(postings_anchor_text).collect()\n",
         "\n",
         "# merge the posting locations into a single dict and run more tests (5 points) - todo delete this cell\n",
