write all indexes into GCP bucket

--- a/inverted_index.ipynb
+++ b/inverted_index.ipynb
@@ -834,6 +834,39 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        "#write index to bucket in GCP\n",
+        "index_src_title = \"titleIndex.pkl\"\n",
+        "index_dst_title = f'gs://{bucket_name}/index_gcp/{index_src_title}' #todo - write to other file?\n",
+        "!gsutil cp $index_src_title $index_dst_title\n",
+        "\n",
+        "#make sure that the data was written\n",
+        "!gsutil ls -lh $index_dst_title"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hhx_AQoXN9J5",
+        "outputId": "e84728f9-7634-40fc-ad8b-cdd004cde4f6"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Copying file://titleIndex.pkl [Content-Type=application/octet-stream]...\n",
+            "/ [1 files][ 74.4 KiB/ 74.4 KiB]                                                \n",
+            "Operation completed over 1 objects/74.4 KiB.                                     \n",
+            " 74.45 KiB  2022-01-01T15:57:44Z  gs://project_ir_inverted_index_test/index_gcp/titleIndex.pkl\n",
+            "TOTAL: 1 objects, 76233 bytes (74.45 KiB)\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "### **Document anchor text inverted index**"
@@ -959,6 +992,41 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#write index to bucket in GCP\n",
+        "index_src_anchorText = \"anchorTextIndex.pkl\"\n",
+        "index_dst_anchorText = f'gs://{bucket_name}/index_gcp/{index_src_anchorText}' #todo - write to other file?\n",
+        "!gsutil cp $index_src_anchorText $index_dst_anchorText\n",
+        "\n",
+        "#make sure that the data was written\n",
+        "!gsutil ls -lh $index_dst_anchorText\n",
+        "\n",
+        "#https://console.cloud.google.com/storage/browser/project_ir_inverted_index_test/index_gcp;tab=objects?authuser=1&project=ir-course-334114&pageState=(%22StorageObjectListTable%22:(%22f%22:%22%255B%255D%22))&prefix=&forceOnObjectsSortingFiltering=false"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "m84pMqb1OSum",
+        "outputId": "6cc0842d-2e59-4482-a95d-2081207a26ec"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Copying file://anchorTextIndex.pkl [Content-Type=application/octet-stream]...\n",
+            "/ [1 files][  4.9 MiB/  4.9 MiB]                                                \n",
+            "Operation completed over 1 objects/4.9 MiB.                                      \n",
+            "  4.93 MiB  2022-01-01T15:58:26Z  gs://project_ir_inverted_index_test/index_gcp/anchorTextIndex.pkl\n",
+            "TOTAL: 1 objects, 5174238 bytes (4.93 MiB)\n"
+          ]
+        }
+      ]
     }
   ]
 }
