--- a/run_frontend_in_colab.ipynb
+++ b/run_frontend_in_colab.ipynb
@@ -184,21 +184,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 27,
       "metadata": {
         "id": "nXn5PlyGORQr",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5faa93dc-9ce3-4550-989f-e390fbf15d9e"
+        "outputId": "6d1d9e58-8dee-47f0-cdb7-b33ba68caa23"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[?25l\r\u001b[K     |████                            | 10 kB 21.8 MB/s eta 0:00:01\r\u001b[K     |████████                        | 20 kB 24.8 MB/s eta 0:00:01\r\u001b[K     |███████████▉                    | 30 kB 19.0 MB/s eta 0:00:01\r\u001b[K     |███████████████▉                | 40 kB 12.4 MB/s eta 0:00:01\r\u001b[K     |███████████████████▊            | 51 kB 5.7 MB/s eta 0:00:01\r\u001b[K     |███████████████████████▊        | 61 kB 6.1 MB/s eta 0:00:01\r\u001b[K     |███████████████████████████▋    | 71 kB 5.6 MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▋| 81 kB 6.2 MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 83 kB 1.1 MB/s \n",
-            "\u001b[?25h"
+            "\u001b[K     |████████████████████████████████| 281.3 MB 38 kB/s \n",
+            "\u001b[K     |████████████████████████████████| 198 kB 39.7 MB/s \n",
+            "\u001b[?25h  Building wheel for pyspark (setup.py) ... \u001b[?25l\u001b[?25hdone\n"
           ]
         }
       ],
@@ -207,7 +208,8 @@
         "# colab\n",
         "!pip -q install flask-ngrok\n",
         "!pip -q install flask==0.12.2\n",
-        "# !pip -q install flask_restful"
+        "# !pip -q install flask_restful\n",
+        "!pip install -q pyspark\n"
       ]
     },
     {
@@ -287,15 +289,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ed99f49f-963e-4e2a-9c02-0ba493975258"
+        "outputId": "4c9c66e5-1a9b-4be6-ae5f-b6e026411909"
       },
-      "execution_count": 22,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "index_gcp/bodyIndex.pkl\n"
+            "<inverted_index_colab.InvertedIndex object at 0x7fa5a2ec81d0>\n"
           ]
         },
         {
@@ -306,7 +308,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 33
         }
       ]
     },
@@ -378,9 +380,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 221
         },
-        "outputId": "3a7169fb-4102-427a-adca-56cd918a9358"
+        "outputId": "32e9dd84-8e75-4154-a54f-62f0668a5fa2"
       },
-      "execution_count": 12,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "error",
@@ -389,7 +391,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-12-9d609bf3314f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'queries_train.json'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rt'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m   \u001b[0mqueries\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-24-9d609bf3314f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'queries_train.json'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rt'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m   \u001b[0mqueries\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'queries_train.json'"
           ]
         }
