--- a/inverted_index_to_gcp.ipynb
+++ b/inverted_index_to_gcp.ipynb
@@ -331,6 +331,35 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "73344cc0",
+      "metadata": {
+        "id": "73344cc0"
+      },
+      "outputs": [],
+      "source": [
+        "# create inverted index instance & write it to GCP function\n",
+        "def createInvertedIndexInstance(super_posting_locs, w2df_dict, DL_dic, term_total, pathName, bucket):\n",
+        "  # Create inverted index instance\n",
+        "  inverted_index = InvertedIndex()\n",
+        "  # Adding the posting locations dictionary to the inverted index\n",
+        "  inverted_index.posting_locs = super_posting_locs\n",
+        "  # Add the token - df dictionary to the inverted index\n",
+        "  inverted_index.df = w2df_dict\n",
+        "  # Added DL_body dict\n",
+        "  inverted_index.DL = DL_dic\n",
+        "  # Added term_total dict\n",
+        "  inverted_index.term_total = term_total\n",
+        "  # write the global stats out\n",
+        "  inverted_index.write_index('.', pathName)\n",
+        "  # upload to gs\n",
+        "  index_src = pathName+\".pkl\"\n",
+        "  index_dst = f'gs://{bucket}/postings_gcp/body/{index_src}'\n",
+        "  !gsutil cp $index_src $index_dst"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "From this point, we will strat to build 3 inverted indeces, one for the body, one for the title, and one for the anchor text"
@@ -432,14 +461,14 @@
       "outputs": [],
       "source": [
         "# collect all posting lists locations into one super-set\n",
-        "super_posting_locs = defaultdict(list)\n",
+        "super_posting_locs_body = defaultdict(list)\n",
         "for blob in client.list_blobs(bucket_name, prefix='postings_gcp/body'):\n",
         "    if not blob.name.endswith(\"pickle\"):\n",
         "        continue\n",
         "    with blob.open(\"rb\") as f:\n",
         "        posting_locs = pickle.load(f)\n",
         "        for k, v in posting_locs.items():\n",
-        "            super_posting_locs[k].extend(v)"
+        "            super_posting_locs_body[k].extend(v)"
       ]
     },
     {
@@ -463,34 +492,8 @@
         }
       ],
       "source": [
-        "# Create inverted index instance\n",
-        "inverted_index_body = InvertedIndex()\n",
-        "# Adding the posting locations dictionary to the inverted index\n",
-        "inverted_index_body.posting_locs = super_posting_locs\n",
-        "# Add the token - df dictionary to the inverted index\n",
-        "inverted_index_body.df = w2df_dict_body\n",
-        "# @TODO: update - added DL_body dict\n",
-        "inverted_index_body.DL = DL_body\n",
-        "#@TODO: update - added DL dict\n",
-        "inverted_index_body.term_total = term_total_body\n",
-        "# write the global stats out\n",
-        "inverted_index_body.write_index('.', 'index_body')\n",
-        "# upload to gs\n",
-        "index_src = \"index_body.pkl\"\n",
-        "index_dst = f'gs://{bucket_name}/postings_gcp/body/{index_src}'\n",
-        "!gsutil cp $index_src $index_dst"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "73344cc0",
-      "metadata": {
-        "id": "73344cc0"
-      },
-      "outputs": [],
-      "source": [
-        ""
+        "#create the inverted index instance, and write it to GCP\n",
+        "createInvertedIndexInstance(super_posting_locs_body, w2df_dict_body, DL_body, term_total_body, 'index_body', bucket_name)"
       ]
     }
   ],
