Ceate 3 indexes: body, title, anchor text, and write them to GCP

--- a/inverted_index_to_gcp.ipynb
+++ b/inverted_index_to_gcp.ipynb
@@ -385,7 +385,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Document body inverted index**"
+        "### **Document body inverted index**"
       ],
       "metadata": {
         "id": "OFVSh0xoqEUn"
@@ -435,20 +435,16 @@
         }
       ],
       "source": [
-        "# time the index creation time\n",
-        "t_start = time()\n",
         "# word counts map\n",
-        "word_counts_body = united_body_corpus.flatMap(lambda x: word_count(x[0], x[1]))\n",
+        "word_counts_body = united_body_corpus.flatMap(lambda x: word_count(x[0], x[1],True))\n",
         "postings_body = word_counts_body.groupByKey().mapValues(reduce_word_counts)\n",
         "# filtering postings and calculate df\n",
         "postings_filtered_body = postings_body.filter(lambda x: len(x[1])>50)\n",
-        "w2df_body = calculate_df(postings_filtered_body)\n",
-        "w2df_dict_body = w2df_body.collectAsMap()\n",
+        "w2df_dict_body = calculate_df(postings_filtered_body).collectAsMap()\n",
         "DL_body = united_body_corpus.map(lambda x: calculate_DL(x[0], x[1], True)).collectAsMap()\n",
         "term_total_body = (word_counts_body.map(lambda x: (x[0], x[1][1]))).reduceByKey(lambda x, y: x + y).collectAsMap()\n",
         "# partition posting lists and write out\n",
-        "_ = partition_postings_and_write(postings_filtered_body, \"body\").collect()\n",
-        "index_const_time = time() - t_start"
+        "_ = partition_postings_and_write(postings_filtered_body, \"body\").collect()"
       ]
     },
     {
@@ -495,6 +491,227 @@
         "#create the inverted index instance, and write it to GCP\n",
         "createInvertedIndexInstance(super_posting_locs_body, w2df_dict_body, DL_body, term_total_body, 'index_body', bucket_name)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **Document title inverted index**"
+      ],
+      "metadata": {
+        "id": "ulBaGZgHv0YY"
+      },
+      "id": "ulBaGZgHv0YY"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "outputId": "a4502009-a219-4df7-9188-c1912dad885f",
+        "id": "XYSSDMNNwAEH"
+      },
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "[Stage 2:======================================================>(122 + 2) / 124]\r"
+          ]
+        }
+      ],
+      "source": [
+        "#RDD of our temporary corpus - delete when build the real index TODO\n",
+        "general_1000_docs_title = parquetFile.limit(1000).select(\"title\",\"id\").rdd\n",
+        "in_train_test_docs_title = df.select(\"title\",\"id\").rdd\n",
+        "united_title_corpus = in_train_test_docs_title.union(general_1000_docs_title).distinct()"
+      ],
+      "id": "XYSSDMNNwAEH"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "outputId": "f4ca8c90-2f1b-4bfa-daf0-b6000379d6c1",
+        "id": "BvIOUZ5UwAES"
+      },
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "                                                                                \r"
+          ]
+        }
+      ],
+      "source": [
+        "# word counts map\n",
+        "word_counts_title = united_title_corpus.flatMap(lambda x: word_count(x[0], x[1],False))\n",
+        "postings_title = word_counts_title.groupByKey().mapValues(reduce_word_counts)\n",
+        "# calculate df\n",
+        "w2df_dict_title = calculate_df(postings_title).collectAsMap()\n",
+        "DL_title = united_title_corpus.map(lambda x: calculate_DL(x[0], x[1], True)).collectAsMap()\n",
+        "term_total_title = (word_counts_title.map(lambda x: (x[0], x[1][1]))).reduceByKey(lambda x, y: x + y).collectAsMap()\n",
+        "# partition posting lists and write out\n",
+        "_ = partition_postings_and_write(postings_title, \"body\").collect()"
+      ],
+      "id": "BvIOUZ5UwAES"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "FEf6yiBnwAES"
+      },
+      "outputs": [],
+      "source": [
+        "# collect all posting lists locations into one super-set\n",
+        "super_posting_locs_title = defaultdict(list)\n",
+        "for blob in client.list_blobs(bucket_name, prefix='postings_gcp/title'):\n",
+        "    if not blob.name.endswith(\"pickle\"):\n",
+        "        continue\n",
+        "    with blob.open(\"rb\") as f:\n",
+        "        posting_locs = pickle.load(f)\n",
+        "        for k, v in posting_locs.items():\n",
+        "            super_posting_locs_title[k].extend(v)"
+      ],
+      "id": "FEf6yiBnwAES"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "outputId": "11ede8da-a8ae-48e5-e7f3-6134b6a33f19",
+        "collapsed": true,
+        "id": "vUgccHSlwAES"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Copying file://bodyIndex.pkl [Content-Type=application/octet-stream]...\n",
+            "/ [1 files][  2.8 MiB/  2.8 MiB]                                                \n",
+            "Operation completed over 1 objects/2.8 MiB.                                      \n"
+          ]
+        }
+      ],
+      "source": [
+        "#create the inverted index instance, and write it to GCP\n",
+        "createInvertedIndexInstance(super_posting_locs_title, w2df_dict_title, DL_title, term_total_title, 'index_title', bucket_name)"
+      ],
+      "id": "vUgccHSlwAES"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **Document anchor text inverted index**"
+      ],
+      "metadata": {
+        "id": "jsW26xkP9lDj"
+      },
+      "id": "jsW26xkP9lDj"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "outputId": "a4502009-a219-4df7-9188-c1912dad885f",
+        "id": "XwQJlU3U9oYF"
+      },
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "[Stage 2:======================================================>(122 + 2) / 124]\r"
+          ]
+        }
+      ],
+      "source": [
+        "#RDD of our temporary corpus - delete when build the real index TODO\n",
+        "# take the selected parameters of the first 1,000 rows and create an RDD from it\n",
+        "general_1000_docs_anchor_text = parquetFile.limit(1000).select(\"id\",\"anchor_text\").rdd \n",
+        "general_1000_docs_anchor_text_flat = general_1000_docs_anchor_text.map(lambda x : (x[0],\", \".join([y[\"text\"] for y in x[1]])))\n",
+        "\n",
+        "in_train_test_docs_anchor_text = df.select(\"id\",\"anchor_text\").rdd \n",
+        "in_train_test_docs_anchor_text_flat = in_train_test_docs_anchor_text.map(lambda x : (x[0],\", \".join([y[\"text\"] for y in x[1]])))\n",
+        "\n",
+        "united_anchor_text_corpus = in_train_test_docs_anchor_text_flat.union(general_1000_docs_anchor_text_flat).distinct()"
+      ],
+      "id": "XwQJlU3U9oYF"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "outputId": "f4ca8c90-2f1b-4bfa-daf0-b6000379d6c1",
+        "id": "Yd4FppiT9oYG"
+      },
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "                                                                                \r"
+          ]
+        }
+      ],
+      "source": [
+        "# word counts map\n",
+        "word_counts_anchor_text = united_anchor_text_corpus.flatMap(lambda x: word_count(str(x[1]), x[0],True))\n",
+        "postings_anchor_text = word_counts_anchor_text.groupByKey().mapValues(reduce_word_counts)\n",
+        "# calculate df\n",
+        "w2df_anchor_text = calculate_df(postings_anchor_text).collectAsMap()\n",
+        "DL_anchor_text = united_anchor_text_corpus.map(lambda x: calculate_DL(x[0], x[1], True)).collectAsMap()\n",
+        "term_total_anchor_text = (word_counts_anchor_text.map(lambda x: (x[0], x[1][1]))).reduceByKey(lambda x, y: x + y).collectAsMap()\n",
+        "# partition posting lists and write out\n",
+        "_ = partition_postings_and_write(postings_anchor_text, \"anchor_text\").collect()"
+      ],
+      "id": "Yd4FppiT9oYG"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "TLma6qNG9oYH"
+      },
+      "outputs": [],
+      "source": [
+        "# collect all posting lists locations into one super-set\n",
+        "super_posting_locs_title_anchor_text = defaultdict(list)\n",
+        "for blob in client.list_blobs(bucket_name, prefix='postings_gcp/anchor_text'):\n",
+        "    if not blob.name.endswith(\"pickle\"):\n",
+        "        continue\n",
+        "    with blob.open(\"rb\") as f:\n",
+        "        posting_locs = pickle.load(f)\n",
+        "        for k, v in posting_locs.items():\n",
+        "            super_posting_locs_title_anchor_text[k].extend(v)"
+      ],
+      "id": "TLma6qNG9oYH"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "outputId": "11ede8da-a8ae-48e5-e7f3-6134b6a33f19",
+        "collapsed": true,
+        "id": "uMMSunMF9oYH"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Copying file://bodyIndex.pkl [Content-Type=application/octet-stream]...\n",
+            "/ [1 files][  2.8 MiB/  2.8 MiB]                                                \n",
+            "Operation completed over 1 objects/2.8 MiB.                                      \n"
+          ]
+        }
+      ],
+      "source": [
+        "#create the inverted index instance, and write it to GCP\n",
+        "createInvertedIndexInstance(super_posting_locs_title_anchor_text, w2df_anchor_text, DL_anchor_text, term_total_anchor_text, 'index_anchor_text', bucket_name)"
+      ],
+      "id": "uMMSunMF9oYH"
     }
   ],
   "metadata": {
