add total vec size field in inverted index object

--- a/inverted_index_to_gcp.ipynb
+++ b/inverted_index_to_gcp.ipynb
@@ -351,11 +351,12 @@
         "  inverted_index.DL = DL_dic\n",
         "  # Added term_total dict\n",
         "  inverted_index.term_total = term_total\n",
+        "  inverted_index.total_vec_size = len(inverted_index.term_total)\n",
         "  # write the global stats out\n",
         "  inverted_index.write_index('.', pathName)\n",
         "  # upload to gs\n",
         "  index_src = pathName+\".pkl\"\n",
-        "  index_dst = f'gs://{bucket}/postings_gcp/body/{index_src}'\n",
+        "  index_dst = f'gs://{bucket}/postings_gcp/{pathName}/{index_src}'\n",
         "  !gsutil cp $index_src $index_dst"
       ]
     },
@@ -411,7 +412,6 @@
       ],
       "source": [
         "#RDD of our temporary corpus - delete when build the real index TODO\n",
-        "\n",
         "general_1000_docs_body = parquetFile.limit(1000).select(\"text\",\"id\").rdd\n",
         "in_train_test_docs_body = df.select(\"text\",\"id\").rdd\n",
         "united_body_corpus = in_train_test_docs_body.union(general_1000_docs_body).distinct()"
@@ -444,7 +444,7 @@
         "DL_body = united_body_corpus.map(lambda x: calculate_DL(x[0], x[1], True)).collectAsMap()\n",
         "term_total_body = (word_counts_body.map(lambda x: (x[0], x[1][1]))).reduceByKey(lambda x, y: x + y).collectAsMap()\n",
         "# partition posting lists and write out\n",
-        "_ = partition_postings_and_write(postings_filtered_body, \"body\").collect()"
+        "_ = partition_postings_and_write(postings_filtered_body, \"index_body\").collect()"
       ]
     },
     {
@@ -458,7 +458,7 @@
       "source": [
         "# collect all posting lists locations into one super-set\n",
         "super_posting_locs_body = defaultdict(list)\n",
-        "for blob in client.list_blobs(bucket_name, prefix='postings_gcp/body'):\n",
+        "for blob in client.list_blobs(bucket_name, prefix='postings_gcp/index_body'):\n",
         "    if not blob.name.endswith(\"pickle\"):\n",
         "        continue\n",
         "    with blob.open(\"rb\") as f:\n",
@@ -548,10 +548,10 @@
         "postings_title = word_counts_title.groupByKey().mapValues(reduce_word_counts)\n",
         "# calculate df\n",
         "w2df_dict_title = calculate_df(postings_title).collectAsMap()\n",
-        "DL_title = united_title_corpus.map(lambda x: calculate_DL(x[0], x[1], True)).collectAsMap()\n",
+        "DL_title = united_title_corpus.map(lambda x: calculate_DL(x[0], x[1], False)).collectAsMap()\n",
         "term_total_title = (word_counts_title.map(lambda x: (x[0], x[1][1]))).reduceByKey(lambda x, y: x + y).collectAsMap()\n",
         "# partition posting lists and write out\n",
-        "_ = partition_postings_and_write(postings_title, \"body\").collect()"
+        "_ = partition_postings_and_write(postings_title, \"index_title\").collect()"
       ],
       "id": "BvIOUZ5UwAES"
     },
@@ -565,7 +565,7 @@
       "source": [
         "# collect all posting lists locations into one super-set\n",
         "super_posting_locs_title = defaultdict(list)\n",
-        "for blob in client.list_blobs(bucket_name, prefix='postings_gcp/title'):\n",
+        "for blob in client.list_blobs(bucket_name, prefix='postings_gcp/index_title'):\n",
         "    if not blob.name.endswith(\"pickle\"):\n",
         "        continue\n",
         "    with blob.open(\"rb\") as f:\n",
@@ -664,7 +664,7 @@
         "DL_anchor_text = united_anchor_text_corpus.map(lambda x: calculate_DL(x[0], x[1], True)).collectAsMap()\n",
         "term_total_anchor_text = (word_counts_anchor_text.map(lambda x: (x[0], x[1][1]))).reduceByKey(lambda x, y: x + y).collectAsMap()\n",
         "# partition posting lists and write out\n",
-        "_ = partition_postings_and_write(postings_anchor_text, \"anchor_text\").collect()"
+        "_ = partition_postings_and_write(postings_anchor_text, \"index_anchor_text\").collect()"
       ],
       "id": "Yd4FppiT9oYG"
     },
@@ -678,7 +678,7 @@
       "source": [
         "# collect all posting lists locations into one super-set\n",
         "super_posting_locs_title_anchor_text = defaultdict(list)\n",
-        "for blob in client.list_blobs(bucket_name, prefix='postings_gcp/anchor_text'):\n",
+        "for blob in client.list_blobs(bucket_name, prefix='postings_gcp/index_anchor_text'):\n",
         "    if not blob.name.endswith(\"pickle\"):\n",
         "        continue\n",
         "    with blob.open(\"rb\") as f:\n",
