Add doc id to title member field

--- a/inverted_index_to_gcp.ipynb
+++ b/inverted_index_to_gcp.ipynb
@@ -357,7 +357,8 @@
         "  # upload to gs\n",
         "  index_src = pathName+\".pkl\"\n",
         "  index_dst = f'gs://{bucket}/postings_gcp/{pathName}/{index_src}'\n",
-        "  !gsutil cp $index_src $index_dst"
+        "  !gsutil cp $index_src $index_dst\n",
+        "  return inverted_index"
       ]
     },
     {
@@ -520,8 +521,8 @@
       ],
       "source": [
         "#RDD of our temporary corpus - delete when build the real index TODO\n",
-        "general_1000_docs_title = parquetFile.limit(1000).select(\"title\",\"id\").rdd\n",
-        "in_train_test_docs_title = df.select(\"title\",\"id\").rdd\n",
+        "general_1000_docs_title = parquetFile.limit(1000).select(\"id\",\"title\").rdd\n",
+        "in_train_test_docs_title = df.select(\"id\",\"title\").rdd\n",
         "united_title_corpus = in_train_test_docs_title.union(general_1000_docs_title).distinct()"
       ],
       "id": "XYSSDMNNwAEH"
@@ -544,11 +545,11 @@
       ],
       "source": [
         "# word counts map\n",
-        "word_counts_title = united_title_corpus.flatMap(lambda x: word_count(x[0], x[1],False))\n",
+        "word_counts_title = united_title_corpus.flatMap(lambda x: word_count(x[1], x[0],False))\n",
         "postings_title = word_counts_title.groupByKey().mapValues(reduce_word_counts)\n",
         "# calculate df\n",
         "w2df_dict_title = calculate_df(postings_title).collectAsMap()\n",
-        "DL_title = united_title_corpus.map(lambda x: calculate_DL(x[0], x[1], False)).collectAsMap()\n",
+        "DL_title = united_title_corpus.map(lambda x: calculate_DL(x[1], x[0], False)).collectAsMap()\n",
         "term_total_title = (word_counts_title.map(lambda x: (x[0], x[1][1]))).reduceByKey(lambda x, y: x + y).collectAsMap()\n",
         "# partition posting lists and write out\n",
         "_ = partition_postings_and_write(postings_title, \"index_title\").collect()"
@@ -596,7 +597,8 @@
       ],
       "source": [
         "#create the inverted index instance, and write it to GCP\n",
-        "createInvertedIndexInstance(super_posting_locs_title, w2df_dict_title, DL_title, term_total_title, 'index_title', bucket_name)"
+        "inverted_idx = createInvertedIndexInstance(super_posting_locs_title, w2df_dict_title, DL_title, term_total_title, 'index_title', bucket_name)\n",
+        "inverted_idx.doc_id_to_title = united_title_corpus.collectAsMap()"
       ],
       "id": "vUgccHSlwAES"
     },
