small ')' bug in anchor text creation

--- a/inverted_index_to_gcp.ipynb
+++ b/inverted_index_to_gcp.ipynb
@@ -663,7 +663,7 @@
         "postings_anchor_text = word_counts_anchor_text.groupByKey().mapValues(reduce_word_counts)\n",
         "# calculate df\n",
         "w2df_anchor_text = calculate_df(postings_anchor_text).collectAsMap()\n",
-        "DL_anchor_text = united_anchor_text_corpus.map(lambda x: calculate_DL(str(x[1], x[0], True)).collectAsMap()\n",
+        "DL_anchor_text = united_anchor_text_corpus.map(lambda x: calculate_DL(str(x[1]), x[0], True)).collectAsMap()\n",
         "term_total_anchor_text = (word_counts_anchor_text.map(lambda x: (x[0], x[1][1]))).reduceByKey(lambda x, y: x + y).collectAsMap()\n",
         "# partition posting lists and write out\n",
         "_ = partition_postings_and_write(postings_anchor_text, \"index_anchor_text\").collect()"
