bug  to to title dic saving correction

--- a/inverted_index_to_gcp.ipynb
+++ b/inverted_index_to_gcp.ipynb
@@ -340,7 +340,7 @@
       "outputs": [],
       "source": [
         "# create inverted index instance & write it to GCP function\n",
-        "def createInvertedIndexInstance(super_posting_locs, w2df_dict, DL_dic, term_total, pathName, bucket):\n",
+        "def createInvertedIndexInstance(super_posting_locs, w2df_dict, DL_dic, term_total, pathName, bucket, needUpdateDocTitleDic):\n",
         "  # Create inverted index instance\n",
         "  inverted_index = InvertedIndex()\n",
         "  # Adding the posting locations dictionary to the inverted index\n",
@@ -352,13 +352,14 @@
         "  # Added term_total dict\n",
         "  inverted_index.term_total = term_total\n",
         "  inverted_index.total_vec_size = len(inverted_index.term_total)\n",
+        "  if needUpdateDocTitleDic:\n",
+        "    inverted_idx.doc_id_to_title = united_title_corpus.collectAsMap()\n",
         "  # write the global stats out\n",
         "  inverted_index.write_index('.', pathName)\n",
         "  # upload to gs\n",
         "  index_src = pathName+\".pkl\"\n",
         "  index_dst = f'gs://{bucket}/postings_gcp/{pathName}/{index_src}'\n",
-        "  !gsutil cp $index_src $index_dst\n",
-        "  return inverted_index"
+        "  !gsutil cp $index_src $index_dst"
       ]
     },
     {
@@ -490,7 +491,7 @@
       ],
       "source": [
         "#create the inverted index instance, and write it to GCP\n",
-        "createInvertedIndexInstance(super_posting_locs_body, w2df_dict_body, DL_body, term_total_body, 'index_body', bucket_name)"
+        "createInvertedIndexInstance(super_posting_locs_body, w2df_dict_body, DL_body, term_total_body, 'index_body', bucket_name, False)"
       ]
     },
     {
@@ -597,8 +598,7 @@
       ],
       "source": [
         "#create the inverted index instance, and write it to GCP\n",
-        "inverted_idx = createInvertedIndexInstance(super_posting_locs_title, w2df_dict_title, DL_title, term_total_title, 'index_title', bucket_name)\n",
-        "inverted_idx.doc_id_to_title = united_title_corpus.collectAsMap()"
+        "createInvertedIndexInstance(super_posting_locs_title, w2df_dict_title, DL_title, term_total_title, 'index_title', bucket_name, True)"
       ],
       "id": "vUgccHSlwAES"
     },
@@ -711,7 +711,7 @@
       ],
       "source": [
         "#create the inverted index instance, and write it to GCP\n",
-        "createInvertedIndexInstance(super_posting_locs_title_anchor_text, w2df_anchor_text, DL_anchor_text, term_total_anchor_text, 'index_anchor_text', bucket_name)"
+        "createInvertedIndexInstance(super_posting_locs_title_anchor_text, w2df_anchor_text, DL_anchor_text, term_total_anchor_text, 'index_anchor_text', bucket_name, False)"
       ],
       "id": "uMMSunMF9oYH"
     }
